[package]
name = "staking"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
coordinator = { path = "../../coordinator" }
fkey = { path = "../../key", package = "codechain-key" }
ftypes = { path = "../../types", package = "codechain-types" }
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
serde_derive = "1.0.105"
